--- a/强化专用.md
+++ b/强化专用.md
@@ -300,7 +300,8 @@ SVM模型
 
 
 
-
+神经网路
+- 梯度弥散和梯度爆炸含义和预防
 
 
 
@@ -474,7 +475,11 @@ Python迭代器和生成器？
 你遇到的最困难的事？你如何解决的？
 评价下你自己？
 
+
+
+
 你有什么问题要问我们？
+自己的一些看法
 
 - 你们的数据都从哪里来？
     - 买的，还是公司能搞到
